syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";
option java_package = "com.wiradata.erpapplication.inventories";
option java_multiple_files = true;

message Warehouse {
  string id = 1;
  string company_id = 2;
  string branch_id = 3;
  string branch_name = 4;
  string code = 5;
  string name = 6;
  string pic_name = 7;
  string pic_phone = 8;
  string created_at = 9;
  string created_by = 10;
  string updated_at = 11;
  string updated_by = 12;
}